[package]
name = "cryptopals"
version = "0.2.0"
edition = "2021"

[dependencies]
rand = "0.8"
thiserror = "1.0"
error-stack = "0.3"

[dependencies.itermore]
version = "0.7"
features = ["array_chunks", "array_combinations"]

[dependencies.byte_encoding]
path = "../byte_encoding"

[dependencies.byte_encoding_macro]
path = "../byte_encoding_macro"